--- a/.github/workflows/run_main.yml
+++ b/.github/workflows/run_main.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   run-script:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
       # Step 1: Checkout the repository
