--- a/.github/workflows/run_main.yml
+++ b/.github/workflows/run_main.yml
@@ -2,12 +2,9 @@ name: Run main.py
 
 on:
   schedule:
-    # Schedule the script to run every day at 9:00 AM UTC
-    - cron: "40 2 * * 1-5"
+    # Schedule the script to run every weekday at 2:25 AM UTC
+    - cron: "25 2 * * 1-5" 
   workflow_dispatch: # Allow manual trigger of the workflow
-  push:
-    branches:
-      - main  # Trigger when the main branch is updated
 
 jobs:
   run-script:
